WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187535
REGRESSION (
r233552
): Find highlight has white text on yellow background
https://bugs.webkit.org/show_bug.cgi?id=187535
Summary
REGRESSION (r233552): Find highlight has white text on yellow background
Timothy Hatcher
Reported
2018-07-10 15:23:45 PDT
Image-only tests failing: fast/text/mark-matches-rendering.html fast/text/mark-matches-broken-line-rendering.html
Attachments
Patch
(1.84 KB, patch)
2018-07-10 15:32 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-07-10 15:23:58 PDT
<
rdar://problem/42043371
>
Timothy Hatcher
Comment 2
2018-07-10 15:32:42 PDT
Created
attachment 344725
[details]
Patch
WebKit Commit Bot
Comment 3
2018-07-10 16:19:33 PDT
Comment on
attachment 344725
[details]
Patch Clearing flags on attachment: 344725 Committed
r233704
: <
https://trac.webkit.org/changeset/233704
>
WebKit Commit Bot
Comment 4
2018-07-10 16:19:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug