REGRESSION (r233552): Find highlight has white text on yellow background https://bugs.webkit.org/show_bug.cgi?id=187535 rdar://problem/42043371

Reviewed by Tim Horton.

Fixes existing image tests:
- fast/text/mark-matches-rendering.html
- fast/text/mark-matches-broken-line-rendering.html

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::resolveStyleForMarkedText): Remove incorect UseDarkAppearance.


Canonical link: https://commits.webkit.org/202765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233704 268f45cc-cd09-0410-ab3c-d52691b4dbfc